pxc/tests/test_011_foreach/fe_noret.px
public namespace fe_noret;
import core::common -;


function {t} void field_to_string(string n, t fld, string mutable& str_r)
{
  str_r.append("(");
  str_r.append(n);
  str_r.append(" : ");
  str_r.append(
    core::meta::symbol{t, core::meta::concat{t, "_to_string"}}(fld));
  str_r.append(")");
}

struct foo {
//  int x;
}

function int test()
{
  expand (fld : core::meta::field_names{foo}) {
    return 3;
  } // error: no return
  /*
  foreach (fld : foo) {
    return 3;
  } // error: no return
  */
}

int r = test();

